--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "test": "node --experimental-worker ./node_modules/.bin/jest --verbose false",
+    "test": "jest --verbose false --detectOpenHandles --collectCoverageFrom=!__tests__/worker.ts",
     "test:browser": "webpack-dev-server --config webpack.sandbox.config.js",
     "codecov": "npm run test && codecov",
     "doc": "typedoc --out ./docs -m \"umd\"",
@@ -29,10 +29,11 @@
       }
     },
     "testMatch": [
-      "**/__tests__/*.+(ts|tsx|js)"
+      "**/__tests__/*.+(ts|tsx)"
     ],
     "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "collectCoverage": true,
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "mpppk",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "@types/node": "^10.0.3",
+    "@types/workerpool": "^2.3.0",
     "codecov": "^3.1.0",
     "copy-webpack-plugin": "^4.5.4",
     "html-webpack-plugin": "^3.2.0",
@@ -58,5 +60,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "workerpool": "^2.3.3"
+  }
 }
