--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 node_modules/
 dist/
 src/**/*.js
-test/**/*.js
+__tests__/**/*.js
+__tests__/**/*.d.ts
+src/**/*.d.ts
 .nyc_output/
 docs/
 coverage/
