--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lamool",
   "version": "0.0.1",
   "description": "",
-  "main": "src/lamool.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -17,7 +17,7 @@
   "files": [
     "src/lamool.js"
   ],
-  "types": "src/lamool.d.ts",
+  "types": "src/index.d.ts",
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -43,18 +43,18 @@
   "author": "mpppk",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^23.3.8",
     "@types/node": "^10.0.3",
     "@types/workerpool": "^2.3.0",
     "codecov": "^3.1.0",
     "copy-webpack-plugin": "^4.5.4",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "source-map-support": "^0.5.0",
-    "ts-jest": "^23.1.4",
+    "ts-jest": "^23.10.4",
     "ts-loader": "^4.5.0",
     "tslint": "^5.5.0",
     "tslint-config-prettier": "^1.15.0",
