--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "lib": ["es2015", "dom"]
-  }
+  },
+  "files": [
+    "src/index.ts"
+  ]
 }
