Create function from ZipFile

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^23.3.8",
+    "@types/jszip": "^3.1.4",
     "@types/node": "^10.0.3",
     "@types/workerpool": "^2.3.0",
     "codecov": "^3.1.0",
@@ -66,6 +67,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.344.0",
+    "jszip": "^3.1.5",
     "workerpool": "^2.3.3"
   }
 }
