--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "tsc",
+    "clean": "rimraf src/**/*.js src/**/*.js.map",
     "watch": "tsc --watch",
     "test": "jest --verbose false --detectOpenHandles --collectCoverageFrom=!__tests__/*.ts",
     "test:browser": "webpack-dev-server --config webpack.sandbox.config.js",
@@ -54,6 +55,7 @@
     "jest": "^23.6.0",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
+    "rimraf": "^2.6.2",
     "source-map-support": "^0.5.0",
     "ts-jest": "^23.10.4",
     "ts-loader": "^4.5.0",
