--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.344.0",
+    "axios": "^0.18.0",
     "jszip": "^3.1.5",
     "workerpool": "^2.3.3"
   }
