--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lamool",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Universal AWS Lambda runtime",
   "main": "src/index.js",
   "scripts": {
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.344.0",
+    "axios": "^0.18.0",
     "jszip": "^3.1.5",
     "workerpool": "^2.3.3"
   }
