Update coverage settings

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "clean": "rimraf src/**/*.js src/**/*.js.map",
     "watch": "tsc --watch",
-    "test": "jest --verbose false --detectOpenHandles --collectCoverageFrom=!__tests__/*.ts",
+    "pretest": "npm run clean",
+    "test": "jest",
     "test:browser": "webpack-dev-server --config webpack.sandbox.config.js",
     "codecov": "npm run test && codecov",
     "doc": "typedoc --out ./docs -m \"umd\"",
